tests/fixtures/readmes/invalid/short_too_long.readme
Short:        This short description is intentionally far too long for Aminet conventions
Uploader:     test@example.com (T. Test)
Type:         util/misc
Architecture: m68k-amigaos

Short exceeds the 40-character limit.
